Update: modify TileSet schema to support multiple sets per language
