# src/components/TileSet/TileSet.controller.ts
@@ -1,15 +1,20 @@
 import {Router, Request, Response} from 'express';
 import {autoInjectable} from 'tsyringe';
-import {check, validationResult} from 'express-validator';
+import {param, validationResult} from 'express-validator';
 import TileSetService from '@components/TileSet/TileSet.service';
 
 // Middleware for language validation
 const validateLanguage = [
-  check('language')
+  param('language')
     .exists()
     .withMessage('Language parameter is required.')
     .isISO6391()
     .withMessage('Language parameter must be a valid ISO 639-1 code.'),
+];
+
+// Middleware for name validation
+const validateName = [
+  param('name').exists().withMessage('Name parameter is required.'),
 ];
 
 @autoInjectable()
@@ -29,7 +34,33 @@ export default class TileSetController {
     });
 
     this.router.get(
-      '/:language',
+      '/name/:name',
+      validateName,
+      async (req: Request, res: Response) => {
+        const errors = validationResult(req);
+        if (!errors.isEmpty()) {
+          return res.status(400).json({
+            message: errors.array()[0].msg,
+          });
+        }
+
+        const {name} = req.params;
+        const tileSet = await this.tileSetService.findByName(
+          name.toLowerCase()
+        );
+
+        if (tileSet) {
+          return res.status(200).json(tileSet);
+        } else {
+          return res.status(404).json({
+            message: `No Scrabble tile set found with name '${name}'.`,
+          });
+        }
+      }
+    );
+
+    this.router.get(
+      '/language/:language',
       validateLanguage,
       async (req: Request, res: Response) => {
         const errors = validationResult(req);
@@ -40,17 +71,11 @@ export default class TileSetController {
         }
 
         const {language} = req.params;
-        const tileSet = await this.tileSetService.findByLanguage(
+        const tileSets = await this.tileSetService.findByLanguage(
           language.toLowerCase()
         );
 
-        if (tileSet) {
-          return res.status(200).json(tileSet);
-        } else {
-          return res.status(404).json({
-            message: `Scrabble tile set not found for language '${language}.`,
-          });
-        }
+        return res.status(200).json(tileSets);
       }
     );
 
